[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nodan"
version = "1.0.0"
description = "Internet-wide Device Search Engine"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
nodan = "nodan.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nodan*"]
